==> Manuvr/ManuvrOS/ManuvrOS/Platform/Targets/STM32F7/STM32F7.cpp <==
#include <Platform/Platform.h>
#include "STM32F7.h"
#include <unistd.h>
  #include <FreeRTOS.h>

unsigned long micros(void) {
  long v0 = SysTick->VAL;      // Glitch free clock
  long c0 = millis_since_reset;
  long v1 = SysTick->VAL;
  long c1 = millis_since_reset;
  if (v1 < v0) {             // Downcounting, no systick rollover
    return c0*8000-v1/(MCK/8000000UL);
    //return (unsigned long) millis_since_reset/1000000;
  }
  else { // systick rollover, use last count value
    return c1*8000-v1/(MCK/8000000UL);
    //return (unsigned long) millis_since_reset/1000000;
  }
  return 0;
}

void currentDateTime(StringBuilder* target) {
  if (target != nullptr) {
    RTC_TimeTypeDef RTC_TimeStructure;
    RTC_DateTypeDef RTC_DateStructure;

    HAL_RTC_GetTime(&rtc, &RTC_TimeStructure, RTC_FORMAT_BCD);
    HAL_RTC_GetDate(&rtc, &RTC_DateStructure, RTC_FORMAT_BCD);

    target->concatf("%d-%d-%dT", RTC_DateStructure.Year, RTC_DateStructure.Month, RTC_DateStructure.Date);
    target->concatf("%d:%d:%d+00:00", RTC_TimeStructure.Hours, RTC_TimeStructure.Minutes, RTC_TimeStructure.Seconds);
  }
}

int8_t setPinFxn(uint8_t _pin, uint8_t condition, FxnPointer fxn) {
  uint16_t pin_idx   = (_pin % 16);

  if (0 == __ext_line_bindings[pin_idx].condition) {
    /* There is not presently an interrupt condition on this pin.
       Proceed with impunity.  */
    __ext_line_bindings[pin_idx].pin       = _pin;
    __ext_line_bindings[pin_idx].condition = condition;
    __ext_line_bindings[pin_idx].fxn       = fxn;

    GPIO_InitTypeDef GPIO_InitStruct;
    GPIO_InitStruct.Pin    = _associated_pin(_pin);
    GPIO_InitStruct.Speed  = GPIO_SPEED_LOW;
    GPIO_InitStruct.Pull   = GPIO_NOPULL;

    switch (condition) {
      case RISING:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING;
        break;
      case FALLING:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_FALLING;
        break;
      case CHANGE:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING_FALLING;
        break;
      case RISING_PULL_UP:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING;
        GPIO_InitStruct.Pull = GPIO_PULLUP;
        break;
      case FALLING_PULL_UP:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_FALLING;
        GPIO_InitStruct.Pull = GPIO_PULLUP;
        break;
      case CHANGE_PULL_UP:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING_FALLING;
        GPIO_InitStruct.Pull = GPIO_PULLUP;
        break;
      case RISING_PULL_DOWN:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING;
        GPIO_InitStruct.Pull = GPIO_PULLDOWN;
        break;
      case FALLING_PULL_DOWN:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_FALLING;
        GPIO_InitStruct.Pull = GPIO_PULLDOWN;
        break;
      case CHANGE_PULL_DOWN:
        GPIO_InitStruct.Mode = GPIO_MODE_IT_RISING_FALLING;
        GPIO_InitStruct.Pull = GPIO_PULLDOWN;
        break;
      default:
        GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
        break;
    }
    HAL_GPIO_Init(_associated_port(_pin), &GPIO_InitStruct);
    IRQn_Type chan = _get_stm32f7_irq_channel(_pin);
    HAL_NVIC_SetPriority(chan, 1, pin_idx);  // IRQ channel, priority, pin idex.
    HAL_NVIC_EnableIRQ(chan);
  }
  else if (nullptr == __ext_line_bindings[pin_idx].fxn) {
    /* No fxn already occupies the slot, but the def is active. Probably
         already has an event assigned. Ignore the supplied condition and add this
         fxn to the list of things to do. */
    __ext_line_bindings[pin_idx].fxn = fxn;
  }
  else if (__ext_line_bindings[pin_idx].fxn != fxn) {
    StringBuilder local_log("Tried to clobber an existing IRQ event association...\n");
    printEXTIDef(_pin, &local_log);
    Kernel::log(&local_log);
    return -1;
  }
  return 0;
}

int8_t setPin(uint8_t pin, bool val) {
  HAL_GPIO_WritePin(_associated_port(pin), _associated_pin(pin), (val?GPIO_PIN_SET:GPIO_PIN_RESET));
  return 0;
}

int8_t readPin(uint8_t pin) {
  return (GPIO_PIN_SET == HAL_GPIO_ReadPin(_associated_port(pin), _associated_pin(pin)));
}

void STM32F7Platform::jumpToBootloader() {
  globalIRQDisable();
  __set_MSP(0x20001000);      // Set the main stack pointer...
  HAL_RCC_DeInit();               // Switch to HSI, no PLL

  // Per clive1's post, set some sort of key value just below the initial stack pointer.
  // We don't really care if we clobber something, because this fxn will reboot us. But
  // when the reset handler is executed, it will look for this value. If it finds it, it
  // will branch to the Bootloader code.
  *((unsigned long *)0x20001FF0) = 0xb00710ad;
  NVIC_SystemReset();
}

void STM32F7Platform::reboot() {
  globalIRQDisable();
  __set_MSP(0x20001000);      // Set the main stack pointer...
  HAL_RCC_DeInit();               // Switch to HSI, no PLL

  // We do not want to enter the bootloader....
  *((unsigned long *)0x2000FFF0) = 0;
  NVIC_SystemReset();
}
