==> Manuvr/ManuvrOS/ManuvrOS/Platform/Targets/ESP32/ESP32.cpp <==
#include <CommonConstants.h>
#include <Platform/Platform.h>
#include "ESP32.h"
#include "sdkconfig.h"
#include "esp_system.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "soc/efuse_reg.h"
#include "esp_netif.h"
#include "esp_system.h"
#include "esp_log.h"
#include "driver/adc.h"
#include "esp32/rom/ets_sys.h"
  #include "ESP32Storage.h"
  #include <Transports/StandardIO/StandardIO.h>
  #include <XenoSession/Console/ManuvrConsole.h>

long unsigned IRAM_ATTR micros() {
  uint32_t ccount;
  __asm__ __volatile__ ( "rsr     %0, ccount" : "=a" (ccount) );
  return ccount / CONFIG_ESP32_DEFAULT_CPU_FREQ_MHZ;
}

void currentDateTime(StringBuilder* target) {
  if (target != nullptr) {
    time_t now;
    struct tm tstruct;
    time(&now);
    localtime_r(&now, &tstruct);
    char buf[64];
    memset(buf, 0, 64);
    strftime(buf, sizeof(buf), "%Y-%m-%d.%X", &tstruct);
    target->concat(buf);
  }
}

int8_t setPinFxn(uint8_t pin, IRQCondition condition, FxnPointer fxn) {
  if (!GPIO_IS_VALID_GPIO(pin)) {
    ESP_LOGW("ESP32Platform", "GPIO %u is invalid\n", pin);
    return -1;
  }
  gpio_config_t io_conf;
  io_conf.pin_bit_mask = (1 << pin);
  io_conf.mode         = GPIO_MODE_INPUT;
  io_conf.pull_up_en   = GPIO_PULLUP_DISABLE;
  io_conf.pull_down_en = GPIO_PULLDOWN_DISABLE;

  switch (gpio_pins[pin].mode) {
    case GPIOMode::INPUT_PULLUP:
      io_conf.pull_up_en   = GPIO_PULLUP_ENABLE;
      break;
    case GPIOMode::INPUT_PULLDOWN:
      io_conf.pull_down_en = GPIO_PULLDOWN_ENABLE;
      break;
    case GPIOMode::INPUT:
      break;
    default:
      ESP_LOGE("ESP32Platform", "GPIO %u is not an input.\n", pin);
      return -1;
  }

  switch (condition) {
    case IRQCondition::CHANGE:
      io_conf.intr_type = (gpio_int_type_t) GPIO_INTR_ANYEDGE;
      break;
    case IRQCondition::RISING:
      io_conf.intr_type = (gpio_int_type_t) GPIO_INTR_POSEDGE;
      break;
    case IRQCondition::FALLING:
      io_conf.intr_type = (gpio_int_type_t) GPIO_INTR_NEGEDGE;
      break;
    default:
      ESP_LOGE("ESP32Platform", "IRQCondition is invalid for pin %u\n", pin);
      return -1;
  }

  gpio_pins[pin].fxn = fxn;
  gpio_config(&io_conf);
  gpio_set_intr_type((gpio_num_t) pin, GPIO_INTR_ANYEDGE);
  gpio_isr_handler_add((gpio_num_t) pin, gpio_isr_handler, (void*) (0L + pin));
  return 0;
}

int8_t IRAM_ATTR setPin(uint8_t pin, bool val) {
  return (int8_t) gpio_set_level((gpio_num_t) pin, val?1:0);
}

int8_t IRAM_ATTR readPin(uint8_t pin) {
  return (int8_t) gpio_get_level((gpio_num_t) pin);
}

void ESP32Platform::jumpToBootloader() {
  esp_restart();
}

void ESP32Platform::reboot() {
  esp_restart();
}
